test/libhyperion/syntaxTests/nameAndTypeResolution/406_invalid_address_checksum.hyp
contract C {
    function f() pure public {
        address x = Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000FA0bFc97E48458494Ccd857e1A85DC91F7F0046E;
        x;
    }
}
// ----
// SyntaxError 9429: (64-193): This looks like an address but is not a valid QRL address literal. Canonical address: "Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000fA0BfC97e48458494CCD857E1a85dc91f7f0046e".
